--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -37,18 +37,16 @@
         android:layout_width="415dp"
         android:layout_height="444dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar7">
 
         <TextView
-            android:id="@+id/textView1"
-            android:layout_width="76dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="28dp"
+            android:id="@+id/Detalis_name"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
             android:text="name: "
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_id"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -56,85 +54,85 @@
             android:id="@+id/Add_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
             android:ems="10"
             android:inputType="text"
-            android:text="Name"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_id"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            tools:layout_editor_absoluteX="154dp" />
+            app:layout_constraintStart_toEndOf="@+id/Detalis_name"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
-            android:id="@+id/textView2"
-            android:layout_width="77dp"
-            android:layout_height="31dp"
+            android:id="@+id/Detalis_id"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="id:"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_phone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_name" />
 
         <EditText
             android:id="@+id/Add_id"
-            android:layout_width="209dp"
-            android:layout_height="26dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:ems="10"
             android:inputType="number"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_phone"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_id"
             app:layout_constraintTop_toBottomOf="@+id/Add_name" />
 
         <TextView
-            android:id="@+id/textView3"
-            android:layout_width="75dp"
-            android:layout_height="27dp"
+            android:id="@+id/Detalis_phone"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="phone"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_address"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_id" />
 
         <EditText
             android:id="@+id/Add_phone"
-            android:layout_width="210dp"
-            android:layout_height="28dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
             android:ems="10"
-            android:inputType="phone"
+            android:inputType="number"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_addres"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
             app:layout_constraintTop_toBottomOf="@+id/Add_id" />
 
         <TextView
-            android:id="@+id/textView4"
-            android:layout_width="0dp"
+            android:id="@+id/Detalis_address"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="addrees"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_checkBox"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_phone" />
 
         <EditText
             android:id="@+id/Add_addres"
-            android:layout_width="214dp"
-            android:layout_height="41dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
             android:ems="10"
             android:inputType="text"
-            android:text="@string/name"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_checkBox"
-            app:layout_constraintTop_toBottomOf="@+id/Add_phone"
-            tools:layout_editor_absoluteX="154dp" />
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_address"
+            app:layout_constraintTop_toBottomOf="@+id/Add_phone" />
 
         <CheckBox
-            android:id="@+id/Add_checkBox"
+            android:id="@+id/Detalis_checkbox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -145,20 +143,22 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_address" />
 
         <ImageView
             android:id="@+id/imageView"
             android:layout_width="122dp"
             android:layout_height="94dp"
-            tools:layout_editor_absoluteX="43dp"
-            tools:layout_editor_absoluteY="16dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/student" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
-        android:id="@+id/edit_cancelBtn4"
+        android:id="@+id/Add_CancelBtn"
         android:layout_width="183dp"
         android:layout_height="64dp"
         android:layout_marginBottom="16dp"
@@ -167,12 +167,12 @@
         android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/edit_saveBtn4"
+        app:layout_constraintEnd_toStartOf="@+id/Add_SaveBtn"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
-        android:id="@+id/edit_saveBtn4"
+        android:id="@+id/Add_SaveBtn"
         android:layout_width="184dp"
         android:layout_height="65dp"
         android:layout_marginBottom="16dp"
@@ -183,5 +183,5 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/edit_cancelBtn4" />
+        app:layout_constraintStart_toEndOf="@+id/Add_CancelBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
