--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -28,13 +28,13 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar3">
 
         <TextView
-            android:id="@+id/textView1"
+            android:id="@+id/Detalis_name"
             android:layout_width="76dp"
             android:layout_height="24dp"
             android:layout_marginStart="28dp"
             android:text="name: "
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView2"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_id"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -52,15 +52,15 @@
             tools:layout_editor_absoluteX="154dp" />
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/Detalis_id"
             android:layout_width="77dp"
             android:layout_height="31dp"
             android:layout_marginStart="32dp"
             android:text="id:"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView3"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_phone"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView1" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_name" />
 
         <EditText
             android:id="@+id/Add_id"
@@ -71,19 +71,19 @@
             android:inputType="number"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_phone"
-            app:layout_constraintStart_toEndOf="@+id/textView2"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_id"
             app:layout_constraintTop_toBottomOf="@+id/Add_name" />
 
         <TextView
-            android:id="@+id/textView3"
+            android:id="@+id/Detalis_phone"
             android:layout_width="75dp"
             android:layout_height="27dp"
             android:layout_marginStart="32dp"
             android:text="phone"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/textView4"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_address"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_id" />
 
         <EditText
             android:id="@+id/Add_phone"
@@ -94,19 +94,19 @@
             android:inputType="phone"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_addres"
-            app:layout_constraintStart_toEndOf="@+id/textView3"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
             app:layout_constraintTop_toBottomOf="@+id/Add_id" />
 
         <TextView
-            android:id="@+id/textView4"
+            android:id="@+id/Detalis_address"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:text="addrees"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_checkBox"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView3" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_phone" />
 
         <EditText
             android:id="@+id/Add_addres"
@@ -116,12 +116,12 @@
             android:inputType="text"
             android:text="@string/name"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_checkBox"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
             app:layout_constraintTop_toBottomOf="@+id/Add_phone"
             tools:layout_editor_absoluteX="154dp" />
 
         <CheckBox
-            android:id="@+id/Add_checkBox"
+            android:id="@+id/Detalis_checkbox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
@@ -132,7 +132,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView4" />
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_address" />
 
         <ImageView
             android:id="@+id/imageView"
