add activity of details and activity of edit student

--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -9,124 +9,144 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar3"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#EBA09DA0"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="300dp"
+            android:layout_height="53dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Edit Student"
+            android:textSize="34sp"
+            tools:layout_editor_absoluteX="62dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="415dp"
-        android:layout_height="444dp"
-        android:layout_marginTop="12dp"
+        android:layout_width="0dp"
+        android:layout_height="440dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/toolbar3">
 
         <TextView
             android:id="@+id/Detalis_name"
-            android:layout_width="76dp"
-            android:layout_height="24dp"
-            android:layout_marginStart="28dp"
-            android:text="name: "
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="@string/name"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Detalis_id"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <EditText
-            android:id="@+id/Add_name"
+            android:id="@+id/Edit_Name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
-            android:fontFamily="sans-serif"
             android:inputType="text"
-            android:text="Name"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_id"
-            app:layout_constraintTop_toBottomOf="@+id/imageView"
-            tools:layout_editor_absoluteX="154dp" />
+            app:layout_constraintBottom_toTopOf="@+id/Edit_id"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_name"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
         <TextView
             android:id="@+id/Detalis_id"
-            android:layout_width="77dp"
-            android:layout_height="31dp"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:text="id:"
+            android:text="@string/id"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Detalis_phone"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Detalis_name" />
 
         <EditText
-            android:id="@+id/Add_id"
-            android:layout_width="209dp"
-            android:layout_height="26dp"
+            android:id="@+id/Edit_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
             android:inputType="number"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_phone"
+            app:layout_constraintBottom_toTopOf="@+id/Edit_phone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Detalis_id"
-            app:layout_constraintTop_toBottomOf="@+id/Add_name" />
+            app:layout_constraintTop_toBottomOf="@+id/Edit_Name" />
 
         <TextView
             android:id="@+id/Detalis_phone"
-            android:layout_width="75dp"
-            android:layout_height="27dp"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:text="phone"
+            android:text="@string/phone"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Detalis_address"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Detalis_id" />
 
         <EditText
-            android:id="@+id/Add_phone"
-            android:layout_width="210dp"
-            android:layout_height="28dp"
+            android:id="@+id/Edit_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
-            android:inputType="phone"
+            android:inputType="number"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_addres"
+            app:layout_constraintBottom_toTopOf="@+id/Edit_address"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
-            app:layout_constraintTop_toBottomOf="@+id/Add_id" />
+            app:layout_constraintTop_toBottomOf="@+id/Edit_id" />
 
         <TextView
             android:id="@+id/Detalis_address"
-            android:layout_width="0dp"
+            android:layout_width="80dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
-            android:text="addrees"
+            android:text="@string/address"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
+            app:layout_constraintBottom_toTopOf="@+id/Edit_checkbox"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/Detalis_phone" />
 
         <EditText
-            android:id="@+id/Add_addres"
-            android:layout_width="214dp"
-            android:layout_height="41dp"
+            android:id="@+id/Edit_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
             android:inputType="text"
-            android:text="@string/name"
             android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
-            app:layout_constraintTop_toBottomOf="@+id/Add_phone"
-            tools:layout_editor_absoluteX="154dp" />
+            app:layout_constraintBottom_toTopOf="@+id/Edit_checkbox"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_address"
+            app:layout_constraintTop_toBottomOf="@+id/Edit_phone" />
 
         <CheckBox
-            android:id="@+id/Detalis_checkbox"
+            android:id="@+id/Edit_checkbox"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
-            android:text="chekcd"
+            android:text="@string/checked"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -138,48 +158,59 @@
             android:id="@+id/imageView"
             android:layout_width="122dp"
             android:layout_height="94dp"
-            tools:layout_editor_absoluteX="43dp"
-            tools:layout_editor_absoluteY="16dp"
-            tools:srcCompat="@tools:sample/avatars" />
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/student" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/Edit_cancelBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#EBA09DA0"
         android:text="@string/cancel"
         android:textColor="#000000"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/Edit_deleteBtn"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:layout_editor_absoluteY="659dp" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/Edit_deleteBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#EBA09DA0"
         android:text="@string/delete"
         android:textColor="#000000"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/Edit_saveBtn"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/Edit_cancelBtn"
-        tools:layout_editor_absoluteY="659dp" />
+        app:layout_constraintStart_toEndOf="@+id/Edit_cancelBtn" />
 
     <Button
         android:id="@+id/Edit_saveBtn"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="4dp"
         android:backgroundTint="#EBA09DA0"
         android:text="@string/save"
         android:textColor="#000000"
         android:textSize="16sp"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toEndOf="@+id/Edit_deleteBtn"
-        tools:layout_editor_absoluteY="659dp" />
+        app:layout_constraintStart_toEndOf="@+id/Edit_deleteBtn" />
 </androidx.constraintlayout.widget.ConstraintLayout>
