--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -7,9 +7,135 @@
     android:layout_height="match_parent"
     tools:context=".AddStudent">
 
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="0dp"
+        android:layout_height="444dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/toolbar7">
+
+        <TextView
+            android:id="@+id/Detalis_name"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="@string/name"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_id"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <EditText
+            android:id="@+id/Add_Name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:ems="10"
+            android:inputType="text"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Add_id"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_name"
+            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+
+        <TextView
+            android:id="@+id/Detalis_id"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="@string/id"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_phone"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_name" />
+
+        <EditText
+            android:id="@+id/Add_id"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:ems="10"
+            android:inputType="number"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Add_phone"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_id"
+            app:layout_constraintTop_toBottomOf="@+id/Add_Name" />
+
+        <TextView
+            android:id="@+id/Detalis_phone"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="@string/phone"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Detalis_address"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_id" />
+
+        <EditText
+            android:id="@+id/Add_phone"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:ems="10"
+            android:inputType="number"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Add_address"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
+            app:layout_constraintTop_toBottomOf="@+id/Add_id"
+            tools:ignore="TextFields" />
+
+        <TextView
+            android:id="@+id/Detalis_address"
+            android:layout_width="80dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:text="@string/address"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Add_checkbox"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_phone" />
+
+        <EditText
+            android:id="@+id/Add_address"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="50dp"
+            android:ems="10"
+            android:inputType="text"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toTopOf="@+id/Add_checkbox"
+            app:layout_constraintStart_toEndOf="@+id/Detalis_address"
+            app:layout_constraintTop_toBottomOf="@+id/Add_phone" />
+
+        <CheckBox
+            android:id="@+id/Add_checkbox"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="32dp"
+            android:layout_marginEnd="32dp"
+            android:text="@string/checked"
+            android:textSize="20sp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/Detalis_address" />
+
+        <ImageView
+            android:id="@+id/imageView"
+            android:layout_width="122dp"
+            android:layout_height="94dp"
+            android:layout_marginStart="50dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/student" />
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar7"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#EBA09DA0"
         android:minHeight="?attr/actionBarSize"
@@ -32,130 +158,6 @@
 
     </androidx.appcompat.widget.Toolbar>
 
-
-    <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="415dp"
-        android:layout_height="444dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar7">
-
-        <TextView
-            android:id="@+id/Detalis_name"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="name: "
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_id"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-        <EditText
-            android:id="@+id/Add_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:ems="10"
-            android:inputType="text"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_id"
-            app:layout_constraintStart_toEndOf="@+id/Detalis_name"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
-
-        <TextView
-            android:id="@+id/Detalis_id"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="id:"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_phone"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Detalis_name" />
-
-        <EditText
-            android:id="@+id/Add_id"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:ems="10"
-            android:inputType="number"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_phone"
-            app:layout_constraintStart_toEndOf="@+id/Detalis_id"
-            app:layout_constraintTop_toBottomOf="@+id/Add_name" />
-
-        <TextView
-            android:id="@+id/Detalis_phone"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="phone"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_address"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Detalis_id" />
-
-        <EditText
-            android:id="@+id/Add_phone"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:ems="10"
-            android:inputType="number"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Add_addres"
-            app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
-            app:layout_constraintTop_toBottomOf="@+id/Add_id" />
-
-        <TextView
-            android:id="@+id/Detalis_address"
-            android:layout_width="80dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:text="addrees"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Detalis_phone" />
-
-        <EditText
-            android:id="@+id/Add_addres"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="50dp"
-            android:ems="10"
-            android:inputType="text"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toTopOf="@+id/Detalis_checkbox"
-            app:layout_constraintStart_toEndOf="@+id/Detalis_address"
-            app:layout_constraintTop_toBottomOf="@+id/Add_phone" />
-
-        <CheckBox
-            android:id="@+id/Detalis_checkbox"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="32dp"
-            android:layout_marginEnd="32dp"
-            android:text="chekcd"
-            android:textSize="20sp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/Detalis_address" />
-
-        <ImageView
-            android:id="@+id/imageView"
-            android:layout_width="122dp"
-            android:layout_height="94dp"
-            android:layout_marginStart="50dp"
-            android:layout_marginTop="32dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
-            app:srcCompat="@drawable/student" />
-
-    </androidx.constraintlayout.widget.ConstraintLayout>
 
     <Button
         android:id="@+id/Add_CancelBtn"
