--- a/app/src/main/res/layout/activity_details.xml
+++ b/app/src/main/res/layout/activity_details.xml
@@ -9,28 +9,31 @@
 
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar2"
-        android:layout_width="409dp"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="#EBA09DA0"
         android:minHeight="?attr/actionBarSize"
         android:theme="?attr/actionBarTheme"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
 
-    <Button
-        android:id="@+id/button"
-        android:layout_width="135dp"
-        android:layout_height="65dp"
-        android:backgroundTint="#A7A3A7"
-        android:text="EDIT"
-        android:textColor="#070707"
-        android:textSize="20sp"
-        tools:layout_editor_absoluteX="275dp"
-        tools:layout_editor_absoluteY="661dp" />
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="300dp"
+            android:layout_height="53dp"
+            android:fontFamily="sans-serif-medium"
+            android:text="Student Details"
+            android:textSize="34sp"
+            tools:layout_editor_absoluteX="62dp"
+            tools:layout_editor_absoluteY="0dp" />
+
+
+    </androidx.appcompat.widget.Toolbar>
 
     <androidx.constraintlayout.widget.ConstraintLayout
-        android:layout_width="401dp"
+        android:layout_width="0dp"
         android:layout_height="359dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -41,10 +44,11 @@
             android:id="@+id/imageView"
             android:layout_width="102dp"
             android:layout_height="107dp"
-            android:layout_marginStart="24dp"
+            android:layout_marginStart="30dp"
+            android:layout_marginTop="24dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:srcCompat="@drawable/student"
-            tools:layout_editor_absoluteY="16dp" />
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/student" />
 
         <TextView
             android:id="@+id/Detalis_name"
@@ -104,6 +108,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="32dp"
             android:layout_marginEnd="32dp"
+            android:clickable="false"
             android:text="chekcd"
             android:textSize="20sp"
             app:layout_constraintBottom_toBottomOf="parent"
@@ -113,5 +118,18 @@
             app:layout_constraintTop_toBottomOf="@+id/Detalis_address" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <Button
+        android:id="@+id/Detalis_EditBtn"
+        android:layout_width="135dp"
+        android:layout_height="65dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:backgroundTint="#A7A3A7"
+        android:text="EDIT"
+        android:textColor="#070707"
+        android:textSize="20sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
