--- a/app/src/main/res/layout/activity_add_student.xml
+++ b/app/src/main/res/layout/activity_add_student.xml
@@ -30,10 +30,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
+            android:hint="Enter a full name"
             android:inputType="text"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_id"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Detalis_name"
             app:layout_constraintTop_toBottomOf="@+id/imageView" />
 
@@ -53,10 +56,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
+            android:hint="Enter your ID"
             android:inputType="number"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_phone"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Detalis_id"
             app:layout_constraintTop_toBottomOf="@+id/Add_Name" />
 
@@ -76,10 +82,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
+            android:hint="Enter your phone"
             android:inputType="number"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_address"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Detalis_phone"
             app:layout_constraintTop_toBottomOf="@+id/Add_id"
             tools:ignore="TextFields" />
@@ -100,10 +109,13 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="50dp"
+            android:layout_marginEnd="24dp"
             android:ems="10"
+            android:hint="Enter your address"
             android:inputType="text"
             android:textSize="20sp"
             app:layout_constraintBottom_toTopOf="@+id/Add_checkbox"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/Detalis_address"
             app:layout_constraintTop_toBottomOf="@+id/Add_phone" />
 
